0629 게시판 페이징, 무한스크롤 제외 나머지 기능 다 완료된듯. 마이프로필 myAllInfoSettings.html에 아예 합침. navBar_myPage_profile.html 새로 작성. 프로필 하위메뉴.

--- a/src/main/resources/templates/th/askBoard/askBoardList.html
+++ b/src/main/resources/templates/th/askBoard/askBoardList.html
@@ -7,6 +7,7 @@
     <title>질문게시판</title>
 </head>
 <body>
+<div layout:fragment="content">
 <h2>게시글 목록</h2>
 
 <button class="btn btn-primary" onclick="location.href='/askinsert'">글쓰기</button>
@@ -21,8 +22,8 @@
         </tr>
 
         <th:block th:each="board : ${list}">
-            <tr th:onclick="'location.href=\''+@{/askdetail/{askBoardno}(askBoardno=${board.askBoardno})}+'\''">
-                <td th:text="${board.askBoardno}"/>
+            <tr th:onclick="'location.href=\''+@{/askdetail/{askBoardNo}(askBoardNo=${board.askBoardNo})}+'\''">
+                <td th:text="${board.askBoardNo}"/>
                 <td>
                     <th:block th:text="${board.askTitle}"/>
                 </td>
@@ -31,6 +32,7 @@
             </tr>
         </th:block>
     </table>
+</div>
 </div>
 </body>
 </html>
