--- a/src/main/resources/templates/th/member/mypage/info/myAllInfoSettings.html
+++ b/src/main/resources/templates/th/member/mypage/info/myAllInfoSettings.html
@@ -7,7 +7,9 @@
     <th:block layout:fragment="css">
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
         <link rel="stylesheet" th:href="@{/css/myInfoSettings.css}">
+        <link rel="stylesheet" th:href="@{/css/myPage.css}">
     </th:block>
+    <script type="text/javascript" th:src="@{/js/profile.js}"></script>
     <link th:href="@{/css/productPage.css}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -55,7 +57,27 @@
             <div class="tab-pane fade show active" id="nav-myProfile" role="tabpanel"
                  aria-labelledby="nav-myProfile-tab">
                 <div class="container">
-                    <th:block th:replace="th/member/mypage/profile/noteSending"></th:block>
+                    <form action="/member/modifyProfile" method="post" enctype="multipart/form-data" class="frm">
+                        <div class="form-group">
+                            닉네임<input type="text" id="nickName" name="nickName" th:value="${myprofile?.nickName}" placeholder="입력하지 않을 시 아이디로 출력됩니다."/>
+                        </div>
+                        <div class="file_input_div">
+                            프로필사진
+                            <div id="preview" >
+                                <img th:if="${myprofile?.memberImg != null}" th:src="@{'/uploadImg'+${myprofile.memberImg}}" class="file_input_button" alt="open" style="width:200px; height: 200px;"/>
+                                <img th:if="${myprofile?.memberImg == null}" th:src="@{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'}" style="width:200px; height: 200px;"/> </div>
+                            <input type="file" id="uploadFile" name="uploadFile" class="file_input_hidden"/>
+                        </div>
+
+                        <div class="form-group">
+                            한줄소개
+                            <input type="text" id="memberIntro" name="memberIntro" th:value="${myprofile?.memberIntro}"/></p>
+                            <br>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="등록"/>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="tab-pane fade" id="nav-myInfoSettings" role="tabpanel"
