--- a/src/main/resources/templates/th/askBoard/askBoardDetail.html
+++ b/src/main/resources/templates/th/askBoard/askBoardDetail.html
@@ -6,34 +6,13 @@
     <meta charset="UTF-8">
     <title>질문 게시판</title>
 </head>
-<script type="text/javascript">
-    function reply(idx) {
-        var askBoardno = idx;
-        location.href = "/askreply/" + askBoardno;
-    }
-
-    function del(idx) {
-        var askBoardno = idx;
-
-        var result = confirm("정말 삭제하시겠습니까?");
-
-        if (result) {
-            location.href = "/askdelete/" + askBoardno;
-
-        }
-    }
-
-    function update(idx) {
-        var askBoardno = idx;
-        location.href = "/askupdate/" + askBoardno;
-    }
-</script>
+<script type="text/javascript" th:src="@{/js/askBoard.js}"></script>
 <body>
-
+<div layout:fragment="content">
 <h2>게시글 상세</h2>
-<button class="btn btn-primary" th:onclick="'javascript:update('+${detail.askBoardno}+');'">수정</button>
-<button class="btn btn-danger" th:onclick="'javascript:del('+${detail.askBoardno}+');'">삭제</button>
-<button class="btn btn-primary" th:onclick="'javascript:reply('+${detail.askBoardno}+');'">답변하기</button>
+<button class="btn btn-primary" th:onclick="'javascript:update('+${detail.askBoardNo}+');'">수정</button>
+<button class="btn btn-danger" th:onclick="'javascript:del('+${detail.askBoardNo}+');'">삭제</button>
+<button class="btn btn-primary" th:onclick="'javascript:reply('+${detail.askBoardNo}+');'">답변하기</button>
 
 <div class="container">
 
@@ -54,6 +33,20 @@
             <th:block th:utext="${detail.askContent}"/>
         </div>
 
+    <div class="form-group">
+        <form id="comment" method="post" name="comment">
+            <input type="text" id="commentContent" name="commentContent" placeholder="댓글을 입력하세요"/>
+            <input type="hidden" id="askBoardNo" nam="askBoardNo" th:value="${detail.askBoardNo}"/>
+            <input type="button" id="aCommentInsert" name="aCommentInsert" value="작성"/>
+        </form>
+        <tr th:each="aComment : ${askComment}">
+            <td th:text="${aComment.memberId}"></td>
+            <td th:text="${aComment.commentContent}"></td>
+        </th:each>
+        </tr>
+    </div>
+
+</div>
 </div>
 </body>
 </html>
