--- a/src/main/resources/templates/th/askBoard/askBoardInsert.html
+++ b/src/main/resources/templates/th/askBoard/askBoardInsert.html
@@ -8,29 +8,10 @@
 
     <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript" th:src="@{/editor/js/HuskyEZCreator.js}" charset="utf-8"></script>
+    <script type="text/javascript" th:src="@{/js/photoBoard.js}"></script>
 </head>
-<script type="text/javascript">
-    $(function () {
-        var obj = [];
-
-        nhn.husky.EZCreator.createInIFrame({
-            oAppRef: obj,
-            elPlaceHolder: "askContent",
-            sSkinURI: "/editor/SmartEditor2Skin.html",
-            htParams: {
-                bUseToolbar: true,
-                bUseVerticalResizer: true,
-                bUseModeChanger: true,
-            }
-        });
-
-        $("#insertBoard").click(function () {
-            obj.getById["askContent"].exec("UPDATE_CONTENTS_FIELD", []);
-            $("#insertBoardFrm").submit();
-        });
-    });
-</script>
 <body>
+<div layout:fragment="content">
 <h2>글 쓰기</h2>
 
 <div class="container">
@@ -46,6 +27,6 @@
         <input type="button" id="insertBoard" value="등록"/>
     </form>
 </div>
-
+</div>
 </body>
 </html>
