--- a/src/main/resources/templates/th/askBoard/askBoardReplyInsert.html
+++ b/src/main/resources/templates/th/askBoard/askBoardReplyInsert.html
@@ -8,28 +8,11 @@
 
     <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript" th:src="@{/editor/js/HuskyEZCreator.js}" charset="utf-8"></script>
+    <script type="text/javascript" th:src="@{/js/photoBoard.js}"></script>
 </head>
-<script type="text/javascript">
-    $(function () {
-        var obj = [];
 
-        nhn.husky.EZCreator.createInIFrame({
-            oAppRef: obj,
-            elPlaceHolder: "askContent",
-            sSkinURI: "/editor/SmartEditor2Skin.html",
-            htParams: {
-                bUseToolbar: true,
-                bUseVerticalResizer: true,
-                bUseModeChanger: true,
-            }
-        });
-        $("#replyInsertBoard").click(function () {
-            obj.getById["askContent"].exec("UPDATE_CONTENTS_FIELD", []);
-            $("#replyInsertBoardFrm").submit();
-        });
-    });
-</script>
 <body>
+<div layout:fragment="content">
 <h2>답글 작성</h2>
 
 <div class="container">
@@ -46,5 +29,6 @@
         <input type="hidden" id="askIndent" name="askIndent" th:value="${detail.askIndent}"/>
         <input type="button" id="replyInsertBoard" value="등록"/>
     </form>
+</div>
 </div>
 </body>
