--- a/src/main/resources/templates/th/askBoard/askBoardUpdate.html
+++ b/src/main/resources/templates/th/askBoard/askBoardUpdate.html
@@ -8,29 +8,10 @@
 
     <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript" th:src="@{/editor/js/HuskyEZCreator.js}" charset="utf-8"></script>
+    <script type="text/javascript" th:src="@{/js/photoBoard.js}"></script>
 </head>
-<script type="text/javascript">
-    $(function () {
-        var obj = [];
-
-        nhn.husky.EZCreator.createInIFrame({
-            oAppRef: obj,
-            elPlaceHolder: "askContent",
-            sSkinURI: "/editor/SmartEditor2Skin.html",
-            htParams: {
-                bUseToolbar: true,
-                bUseVerticalResizer: true,
-                bUseModeChanger: true,
-            }
-        });
-
-        $("#updateBoard").click(function () {
-            obj.getById["askContent"].exec("UPDATE_CONTENTS_FIELD", []);
-            $("#updateBoardFrm").submit();
-        });
-    });
-</script>
 <body>
+<div layout:fragment="content">
 <h2>글 수정</h2>
 
 <div class="container">
@@ -44,10 +25,10 @@
             <textarea name="askContent" id="askContent" style="width: 700px; height: 400px; "><th:block
                     th:utext="${detail.askContent}"/></textarea>
         </div>
-        <input type="hidden" name="askBoardno" th:value="${detail.askBoardno}"/>
+        <input type="hidden" name="askBoardNo" th:value="${detail.askBoardNo}"/>
         <input type="button" id="updateBoard" value="등록"/>
     </form>
 </div>
-
+</div>
 </body>
 </html>
