--- a/src/main/resources/templates/th/member/mypage/profile/profileInfo.html
+++ b/src/main/resources/templates/th/member/mypage/profile/profileInfo.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="th/layout/defaultLayout">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>프로필 수정</title>
     <th:block layout:fragment="css">
         <link rel="stylesheet" th:href="@{/css/myPage.css}">
     </th:block>
-
+    <script type="text/javascript" th:src="@{/js/profile.js}"></script>
 </head>
-
 <body>
-<div layout:fragment="content">
 <div class="container">
-    <h2>프로필 수정</h2>
-
-    <form action="/modifyProfile" method="post" enctype="multipart/form-data" class="frm">
+    <form action="/member/modifyProfile" method="post" enctype="multipart/form-data" class="frm">
         <div class="form-group">
-            닉네임
-            <input type="text" id="nickName" name="nickName" th:value="${myprofile?.nickName}" placeholder="입력하지 않을 시 아이디로 출력됩니다."/>
-
+            닉네임<input type="text" id="nickName" name="nickName" th:value="${myprofile?.nickName}" placeholder="입력하지 않을 시 아이디로 출력됩니다."/>
         </div>
         <div class="file_input_div">
             프로필사진
@@ -39,8 +31,6 @@
             <input type="submit" value="등록"/>
         </div>
     </form>
-
-</div>
 </div>
 </body>
 </html>
