--- a/src/main/resources/templates/th/member/mypage/profile/receiveNote.html
+++ b/src/main/resources/templates/th/member/mypage/profile/receiveNote.html
@@ -10,9 +10,10 @@
     <script type="text/javascript" th:src="@{/js/profile.js}"></script>
 </head>
 <body>
-
+<div layout:fragment="content">
 <h2>보낸 쪽지함</h2>
-
+<th:block th:replace="th/fragments/navBar_myPage"></th:block>
+    <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
 <div class="container">
     <form action="/noteSending" method="post" id="sending" name="sending">
 
@@ -39,6 +40,7 @@
     </table>
         <input type="hidden" id="receiveId" name="receiveId" value=""/>
     </form>
+</div>
 </div>
 </body>
 </html>
