--- a/src/main/resources/templates/th/photoBoard/photoBoardMain.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardMain.html
@@ -8,12 +8,14 @@
     <th:block layout:fragment="css">
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
     </th:block>
+
+    <script type="text/javascript" th:src="@{/js/photoBoard.js}"></script>
 </head>
 <body>
 <div layout:fragment="content">
     <div class="container store-index-section store-index-product-list"><h1>인기 사진</h1>
         <div class="form-group">
-            <input type="button" id="photoall" name="photoall" value="전체보기" style="background-color: #ffffff; border: 0px; outline: 0px;"/>
+            <button style="background-color: #ffffff; border: 0; outline: 0;" onclick="location.href='/photoBoardList'">전체보기</button>
         </div>
         <div class="virtualized-list row" style="padding-top: 0px; transform: translateY(0px);">
             <tr th:each="rank : ${likerank}">
