--- a/src/main/resources/templates/th/fragments/sellerHeader.html
+++ b/src/main/resources/templates/th/fragments/sellerHeader.html
@@ -23,7 +23,7 @@
                                    aria-expanded="false">업체관리
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" th:href="@{/}">업체관리</a>
+                                    <a class="dropdown-item" th:href="@{/seller/sellerInfo}">업체관리</a>
                                     <a class="dropdown-item" th:href="@{/}">상품관리</a>
                                     <a class="dropdown-item" th:href="@{/}">주문관리</a>
                                     <a class="dropdown-item" th:href="@{/}">통계관리</a>
