--- a/src/main/resources/templates/th/layout/adminLayout.html
+++ b/src/main/resources/templates/th/layout/adminLayout.html
@@ -8,6 +8,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/nav.css}">
     <link rel="stylesheet" th:href="@{/css/basicComponent.css}">
+    <link rel="icon" th:href="@{/icon/thehouse.jpg}">
 
     <script th:src="@{https://code.jquery.com/jquery-3.3.1.min.js}"></script>
 </head>
