--- a/src/main/resources/templates/th/layout/defaultLayout.html
+++ b/src/main/resources/templates/th/layout/defaultLayout.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" th:href="@{/css/nav.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/basicComponent.css}">
+    <link rel="icon" th:href="@{/icon/thehouse.jpg}">
 
     <script th:src="@{https://code.jquery.com/jquery-3.3.1.min.js}"></script>
 </head>
