--- a/src/main/resources/templates/th/seller/category.html
+++ b/src/main/resources/templates/th/seller/category.html
@@ -9,7 +9,7 @@
 
 <body>
 <div layout:fragment="content">
-    <form class="needs-validation" th:method="POST" th:action="@{/testCategory}" enctype="multipart/form-data">
+    <form class="needs-validation" th:method="POST" th:action="@{/addProduct}" enctype="multipart/form-data">
         <div class="wrapper">
 
 
@@ -20,11 +20,15 @@
                 <div class="sidebar">
                     <!-- Sidebar user panel (optional) -->
                     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                        <div class="image">
-                            <img th:src="@{icon/thehouse.jpg}" class="img-circle elevation-2 width=50px height=50px"  alt="User Image">
-                        </div>
-                        <div class="info">
-                            <a href="#" class="d-block">업체명</a>
+                        <div th:each="sellerInfo : ${sellerInfo}">
+                            <div class="image">
+                                <!--                                <img th:src="${sellerInfo.sellerImg}"-->
+                                <img th:src="${sellerInfo.sellerImg}"
+                                     class="rounded-circle width=50px height=50px"
+                                     alt="User Image">
+                                <a th:text="${sellerInfo.sellerName}" th:href="@{/seller/sellerInfo}"></a>
+                            </div>
+
                         </div>
                     </div>
 
@@ -35,18 +39,17 @@
                             <li class="nav-item has-treeview menu-open">
                                 <ul class="nav nav-treeview">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">
+                                        <a th:href="@{/seller/category}" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
-                                            <p>업체 관리</p>
+                                            <p>상품 등록</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">
+                                        <a th:href="@{/seller/category}" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
-                                            <p>업체 ID 관리</p>
+                                            <p>상품 리스트</p>
                                         </a>
                                     </li>
-
                                 </ul>
                             </li>
                         </ul>
@@ -223,11 +226,13 @@
                                     <div class="card-header">
                                         <h3 class="card-title">에디터</h3>
                                     </div>
-
-                                    <div class="form-group">
-                                        <div id="summernote" name="file"><p>Hello Summernote</p></div>
+                                    <div class="custom-file col-md-3">
+                                        <input type="file" class="custom-file-input" name="file"
+                                               id="exampleInputFile5"
+                                               multiple>
+                                        <label class="custom-file-label" for="exampleInputFile5">Choose
+                                            file</label>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -371,39 +376,7 @@
     </script>
 
 
-    <script>
-        $('#summernote').summernote({
-            height: 300,                 // 에디터 높이
-            minHeight: null,             // 최소 높이
-            maxHeight: null,             // 최대 높이
-            focus: true,                  // 에디터 로딩후 포커스를 맞출지 여부
-            lang: "ko-KR",					// 한글 설정
-            placeholder: '최대 2048자까지 쓸 수 있습니다',	//placeholder 설정
-            callbacks: {	//여기 부분이 이미지를 첨부하는 부분
-                onImageUpload: function (files) {
-                    uploadSummernoteImageFile(files[0], this);
-                }
-            }
-        });
 
-        function uploadSummernoteImageFile(file, editor) {
-            data = new FormData();
-            data.append("file", file);
-            $.ajax({
-                data: data,
-                type: "POST",
-                url: "/testCategory",
-                contentType: false,
-                processData: false,
-                success: function (data) {
-                    //항상 업로드된 파일의 url이 있어야 한다.
-                    $(editor).summernote('insertImage', data.url);
-                }
-            });
-        }
-
-
-    </script>
 
 </div>
 </body>
