--- a/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
+++ b/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
@@ -50,7 +50,8 @@
                                 th:attr="data-target='#confirm' + ${iter.count}">구매확정
                         </button>
                         <div th:id="'confirm' + ${iter.count}" class="collapse">
-                            <button type="button" class="btn btn-primary" data-toggle="modal" th:attr="data-target='#return' + ${iter.count}" >
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    th:attr="data-target='#return' + ${iter.count}">
                                 반품
                             </button>
 
@@ -58,8 +59,9 @@
                             <div class="modal fade" th:id="'return' + ${iter.count}">
                                 <div class="modal-dialog modal-dialog-centered">
                                     <form th:action="returnReason" th:method="post">
+                                        <input th:type="hidden" th:name="orderNo"
+                                               th:value="${orderList.orderNo}"></input>
                                         <div class="modal-content">
-
                                             <!-- Modal Header -->
                                             <div class="modal-header">
                                                 <h4 class="modal-title">밤품하시겠습니까?</h4>
@@ -68,12 +70,76 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="form-group">
-                                                    <label for="return-text"
+                                                    <label for="confirmReason-text"
                                                            class="col-form-label">반품사유</label>
                                                     <textarea class="form-control"
-                                                              id="return-text"></textarea>
+                                                              id="confirmReason-text"
+                                                              th:name="orderConfirmReason"
+                                                              placeholder="내용을 입력해주세요"></textarea>
+                                                </div>
+                                            </div>
+                                            <!-- Modal footer -->
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                    취소
+                                                </button>
+                                                <button type="submit" class="btn btn-primary">저장</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div>
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    th:attr="data-target='#review' + ${iter.count}">
+                                리뷰작성
+                            </button>
+
+                            <!-- The Modal -->
+                            <div class="modal fade" th:id="'review' + ${iter.count}">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <form th:action="addReview" th:method="post" enctype="multipart/form-data">
+                                        <input th:type="hidden" th:name="orderNo"
+                                               th:value="${orderList.orderNo}"/>
+                                        <div class="modal-content">
+                                            <!-- Modal Header -->
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal">&times;
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="form-group">
+                                                    <label class="col-form-label">별점평가</label>
                                                 </div>
 
+                                                <div class="form-group">
+                                                    <label for="reviewContent-text"
+                                                           class="col-form-label">리뷰작성</label>
+                                                    <textarea class="form-control"
+                                                              id="reviewContent-text" th:name="reviewContent"
+                                                              placeholder="내용을 입력해주세요"></textarea>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <label>이미첨부</label>
+                                                    <div class="custom-file">
+                                                        <input type="file" th:name="file" id="customFile" multiple>
+                                                        <label class="custom-file-label" for="customFile">이미지를
+                                                            선택하세요</label>
+                                                    </div>
+                                                    <div class="custom-file">
+                                                        <input type="file" th:name="file2" id="customFile2">
+                                                        <label class="custom-file-label" for="customFile2">이미지를
+                                                            선택하세요</label>
+                                                    </div>
+                                                    <div class="custom-file">
+                                                        <input type="file" th:name="file3" id="customFile3">
+                                                        <label class="custom-file-label" for="customFile3">이미지를
+                                                            선택하세요</label>
+                                                    </div>
+                                                </div>
                                             </div>
 
                                             <!-- Modal footer -->
@@ -81,13 +147,53 @@
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">
                                                     취소
                                                 </button>
-                                                <button type="button" class="btn btn-primary">저장</button>
+                                                <button type="submit" class="btn btn-primary">저장</button>
                                             </div>
                                         </div>
                                     </form>
                                 </div>
                             </div>
+                        </div>
 
+                        <div>
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    th:attr="data-target='#cancel' + ${iter.count}">
+                                취소
+                            </button>
+
+                            <!-- The Modal -->
+                            <div class="modal fade" th:id="'cancel' + ${iter.count}">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <form th:action="cancelReason" th:method="post">
+                                        <input th:type="hidden" th:name="orderNo"
+                                               th:value="${orderList.orderNo}"></input>
+                                        <div class="modal-content">
+                                            <!-- Modal Header -->
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">취소하시겠습니까?</h4>
+                                                <button type="button" class="close" data-dismiss="modal">&times;
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="form-group">
+                                                    <label for="cancelReason-text"
+                                                           class="col-form-label">취소사유</label>
+                                                    <textarea class="form-control"
+                                                              id="cancelReason-text" th:name="cancelReason"
+                                                              placeholder="내용을 입력해주세요"></textarea>
+                                                </div>
+                                            </div>
+                                            <!-- Modal footer -->
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                    취소
+                                                </button>
+                                                <button type="submit" class="btn btn-primary">저장</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </td>
                 </tr>
@@ -95,10 +201,47 @@
             </table>
         </div>
         <div class="tab-pane fade" id="myReview" role="tabpanel" aria-labelledby="myReview-tab">
-
-
+            <form th:method="post" th:action="delete">
+                <table class="table review">
+                    <thead class="thead-light">
+                    <tr>
+                        <th scope="col">
+                            <div class="form-check">
+                                <input class="form-check-input position-static" type="checkbox" onclick="checkAll()"
+                                       id="parent"
+                                       value="option1" aria-label="..." checked>
+                            </div>
+                        </th>
+                        <th scope="col">№</th>
+                        <th scope="col">상품명</th>
+                        <th scope="col">리뷰</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="review, iter:${reviewList}">
+                        <td>
+                            <div class="form-check">
+                                <input class="form-check-input position-static" th:value="${review.orderNo}" th:name="orderNo" type="checkbox" id="child_checkbox" aria-label="..." checked>
+                            </div>
+                        </td>
+                        <td th:text="${iter.count}"></td>
+                        <td th:text="${review.productName}">
+                            <label>모델명:</label>
+                            <div th:text="${review.modelName}"></div>
+                            <label>색상:</label>
+                            <div th:text="${review.colorName}"></div>
+                        </td>
+                        <td th:text="${review.reviewContent}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+                <button type="submit" class="btn btn-primary">삭제</button>
+            </form>
         </div>
     </div>
 </div>
+
+
+
 </body>
 </html>
