0629 보류 기능 제외하고 전부 끝. 일단 CSS작업 후 기능 보강

--- a/src/main/resources/templates/th/askBoard/askBoardList.html
+++ b/src/main/resources/templates/th/askBoard/askBoardList.html
@@ -10,7 +10,7 @@
 <div layout:fragment="content">
 <h2>게시글 목록</h2>
 
-<button class="btn btn-primary" onclick="location.href='/askinsert'">글쓰기</button>
+<input type="button" id="askWrite" name="askWrite" onclick="location.href='/askinsert'" value="글쓰기"></input>
 
 <div class="container">
     <table class="table table-hover">
