--- a/src/main/resources/templates/th/fragments/adminHeader.html
+++ b/src/main/resources/templates/th/fragments/adminHeader.html
@@ -47,8 +47,8 @@
                                    aria-expanded="false">업체관리
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" th:href="@{/admin/}">거래처현황</a>
-                                    <a class="dropdown-item" th:href="@{/admin/}">업체신청 승인</a>
+                                    <a class="dropdown-item" th:href="@{/admin/sellerManagement}">거래처현황</a>
+                                    <a class="dropdown-item" th:href="@{/admin/applySeller}">업체신청 승인</a>
                                 </div>
                             </li>
                         </ul>
