--- a/src/main/resources/templates/th/admin/statAdmin/statAdmin.html
+++ b/src/main/resources/templates/th/admin/statAdmin/statAdmin.html
@@ -21,8 +21,8 @@
             <a href="/admin/productRegistration">제품 판매 등록 내역</a><br>
             <a href="/admin/productManagement">제품 판매 관리</a><br>
             <h1> 업체관리 </h1>
-            <a href="#"> 업체관리</a><br>
-            <a href="#">업체신청승인</a><br>
+            <a href="/admin/sellerManagement"> 업체관리</a><br>
+            <a href="/admin/applySeller">업체신청승인</a><br>
             <script>
                 function sellerBtn() {
                     var inputSellerName = document.getElementById("inputSellerName").value;
