--- a/src/main/resources/templates/th/member/mypage/profile/sendNote.html
+++ b/src/main/resources/templates/th/member/mypage/profile/sendNote.html
@@ -21,7 +21,7 @@
 <div layout:fragment="content">
     <th:block th:replace="th/fragments/navBar_myPage"></th:block>
     <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
-<h2>받은 쪽지함</h2>
+<h2>받은 쪽지함&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/member/receiveNote">보낸 쪽지함</a></h2>
 <div class="container">
     <form action="/member/noteSending" method="post" id="sending" name="sending">
 
