adminlayout-footer추가 채팅마무리완료 js파일 없앰 무한스크롤 수정

--- a/src/main/resources/templates/th/admin/chat/chatList.html
+++ b/src/main/resources/templates/th/admin/chat/chatList.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>채팅방리스트</h1>
+                <h1>채팅리스트</h1>
             </div>
             <div th:id="roomContainer" class="roomContainer">
                 <table th:id="roomList" class="roomList"></table>
