--- a/src/main/resources/templates/th/admin/recommender/training.html
+++ b/src/main/resources/templates/th/admin/recommender/training.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 <div layout:fragment="content">
+    <div style="position:relative;left: 500px;">
     <a th:href="@{/admin/trainingStart}"><h1>추천시스템 트레이닝</h1></a>
     누르지마시오
+    </div>
 </div>
 </body>
 </html>
