--- a/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
+++ b/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
@@ -7,10 +7,7 @@
 
     <meta charset="UTF-8">
     <title>Title</title>
-    <th:block layout:fragment="css">
-        <link rel="stylesheet" th:href="@{/css/mainContent.css}">
-        <link rel="stylesheet" th:href="@{/css/basket.css}">
-    </th:block>
+
 </head>
 <body>
 
@@ -24,8 +21,8 @@
         <h1>
             <a href="">연간</a>
         </h1>날짜 : <input id="dateCalendar" type='date'/> - <input id="dateCalendar2" type='date'/><button onclick="getDate()">클릭</button>
-        <div id="hoho">
-        <canvas id="myChart" style="width:100%; height:100%; float:none"></canvas>
+        <div id="hoho" style="width: 50%; height: 400px;">
+        <canvas id="myChart" style="float: none"></canvas>
         </div>
         <div id="field">
         </div>
