--- a/src/main/resources/templates/th/layout/adminLayout.html
+++ b/src/main/resources/templates/th/layout/adminLayout.html
@@ -8,9 +8,6 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
             integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
             crossorigin="anonymous"></script>
@@ -18,6 +15,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/css/nav.css}">
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/basicComponent.css}">
     <link rel="icon" th:href="@{/icon/thehouse.jpg}">
 
@@ -28,6 +26,8 @@
     <th:block th:replace="th/fragments/adminHeader :: headerFragment"></th:block>
 
     <th:block layout:fragment="content"></th:block>
+
+    <th:block th:replace="th/fragments/footer :: footerFragment"></th:block>
 
 </div>
 </body>
